--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\CORE\CORE.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Repositories" />
+    </ItemGroup>
+
 </Project>
