--- a/EducationPortal_BD/EducationPortal_BD.csproj
+++ b/EducationPortal_BD/EducationPortal_BD.csproj
@@ -14,7 +14,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BLL\BLL.csproj" />
       <ProjectReference Include="..\CORE\CORE.csproj" />
+      <ProjectReference Include="..\DAL\DAL.csproj" />
     </ItemGroup>
 
 </Project>
